Structure and files, basic css
Adding a few files to work with, switching from bootstrap to style.css

--- a/myDinner.html
+++ b/myDinner.html
@@ -4,20 +4,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dinner planner - Welcome</title>
+    <title>Dinner planner - My Dinner</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="style.css"> <!--"http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" -->
   </head>
 
 
   <body>
-	<div class="header">
-		<h1>Dinner planner</h1>
-	</div>
-	<div class="createNewDinnerView">
-		<div> Loren ipsus dolor sit amet</div>
-		<button id="newDinnerButton" class="btn">Create New Dinner</button>
-	</div>
+    <div class="header">
+      <h1>Dinner planner</h1>
+    </div>
+
+    <div class="myDinner">
+      At the top:
+      My dinner: how many people are the recipe and price for? To the right, a button that says "Go back and edit dinner"
+      Doesn't need to be very dynamic.
+    </div>
+
+    <div class="menuDisplay">
+      Display each dish on the menu with price and a total.
+    </div>
+    <div>
+      Finally a button that says "Print full recipe"
+    </div>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery.js"></script>
