--- a/viewDish.html
+++ b/viewDish.html
@@ -4,20 +4,36 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dinner planner - Welcome</title>
+    <title>Dinner planner - View dish</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="style.css"> <!--"http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" -->
   </head>
 
 
   <body>
-	<div class="header">
-		<h1>Dinner planner</h1>
-	</div>
-	<div class="createNewDinnerView">
-		<div> Loren ipsus dolor sit amet</div>
-		<button id="newDinnerButton" class="btn">Create New Dinner</button>
-	</div>
+    <div class="header">
+      <h1>Dinner planner</h1>
+    </div>
+
+    <div class="dinnerSummary">
+      Contents of my dinner.
+      This has to be to the left. 
+    </div>
+
+    <div class="dishDisplay">
+      <div class="dishInstructions">
+        Here there should be a picture, and below that the instructions for the recipe.
+        Finally a button that says "Back to search"
+      </div>
+      <div class="ingredients">
+        This should be a list of ingredients in a box. Maybe a table even. 
+        At the bottom should be a button that says "Add to menu" and the total price of the dish. 
+      </div>
+    </div>
+
+    <div>
+      Display dishes. Will have to contain a bunch of views.
+    </div>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery.js"></script>
