--- a/findADish.html
+++ b/findADish.html
@@ -4,20 +4,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dinner planner - Welcome</title>
+    <title>Dinner planner - Find a dish</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="style.css"> <!--"http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" -->
   </head>
 
 
   <body>
-	<div class="header">
-		<h1>Dinner planner</h1>
-	</div>
-	<div class="createNewDinnerView">
-		<div> Loren ipsus dolor sit amet</div>
-		<button id="newDinnerButton" class="btn">Create New Dinner</button>
-	</div>
+    <div class="header">
+      <h1>Dinner planner</h1>
+    </div>
+
+    <div class="dinnerSummary">
+      Contents of my dinner.
+      This has to be to the left. 
+    </div>
+
+    <div class="dishSearch">
+      Find a dish, enter keywords, have a dropdown menu and a search button
+    </div>
+
+    <div>
+      Display dishes. Will have to contain a bunch of views.
+    </div>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery.js"></script>
