--- a/dishDetails.html
+++ b/dishDetails.html
@@ -4,28 +4,30 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dinner planner - My Dinner</title>
+    <title>Dish details - Dinner planner</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="style.css"> <!--"http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" -->
   </head>
 
 
   <body>
-    <div class="header">
-      <h1>Dinner planner</h1>
-    </div>
+    <div class="grid-container">
+      <div class="header">
+        <h1>Dinner planner</h1>
+      </div>
 
-    <div class="myDinner">
-      At the top:
-      My dinner: how many people are the recipe and price for? To the right, a button that says "Go back and edit dinner"
-      Doesn't need to be very dynamic.
-    </div>
-
-    <div class="menuDisplay">
-      Display each dish on the menu with price and a total.
-    </div>
-    <div>
-      Finally a button that says "Print full recipe"
+      <div class="myDinner-left">
+        Contents of my dinner.
+        This has to be to the left. 
+      </div>
+      <div class="dishInstructions">
+        Here there should be a picture, and below that the instructions for the recipe.
+        Finally a button that says "Back to search"
+      </div>
+      <div class="dishIngredients">
+        This should be a list of ingredients in a box. Maybe a table even. 
+        At the bottom should be a button that says "Add to menu" and the total price of the dish. 
+      </div>
     </div>
 
     <!-- jQuery -->
