--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dinner planner - Welcome</title>
+    <title>Welcome - Dinner planner</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="style.css"> <!--"http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" -->
   </head>
 
 
   <body>
-	<div class="header">
-		<h1>Dinner planner</h1>
-	</div>
-	<div class="createNewDinnerView">
-		<div> Loren ipsus dolor sit amet</div>
-		<button id="newDinnerButton" class="btn">Create New Dinner</button>
-	</div>
+    <div class="grid-container">
+      <div class="header">
+        <h1>Dinner planner</h1>
+      </div>
+      <div class="createNewDinnerView">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu nunc ligula. Aenean volutpat magna et fringilla suscipit. Ut efficitur gravida congue. Maecenas orci orci, vestibulum id dolor sed, tempor faucibus lacus. Integer sit amet luctus mauris, eu luctus eros. Pellentesque felis elit, gravida condimentum turpis non, auctor euismod sem. Nulla interdum venenatis massa non varius. Mauris turpis est, accumsan placerat metus et, pretium pulvinar lacus. Duis at dui consequat, tempus leo volutpat, aliquam quam. Curabitur ultricies ac mauris vitae ultrices. Donec pellentesque faucibus sagittis. Integer efficitur, eros sed interdum fringilla, elit mauris dictum tortor, vitae luctus enim ante ac purus. Quisque at iaculis lorem. Donec accumsan ante ut nulla commodo fermentum vitae at massa. Nunc a nunc id neque elementum condimentum. Curabitur elementum dapibus dui, eget iaculis elit porta sit amet.
+      </div>
+      <div class="newDinnerButton">
+        <button class="btn">Create New Dinner</button>
+      </div>
+    </div>
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery.js"></script>
