small update for collaboration

--- a/selectDish.html
+++ b/selectDish.html
@@ -15,9 +15,11 @@
       <div class="header">
         <h1>Dinner planner</h1>
       </div>
-      <div class="myDinner-left">
-        Contents of my dinner.
-        This has to be to the left. 
+      <div class="myDinnerLeft">
+        <h2>My Dinner</h2>
+        People <span id="numberOfGuests"></span>
+        Dish Name   Cost
+        Some view of each dish on my menu. Reference myDinnerLeftView.js
       </div>
 
       <div class="dishSearch">
@@ -38,6 +40,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
 	<script src="js/view/exampleView.js"></script>
+  <script type="js/view/myDinnerLeftView.js"></script>
 	<!-- TODO: Here you should include JS code for your other views -->
   </body>
 </html>
