--- a/selectDish.html
+++ b/selectDish.html
@@ -40,7 +40,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
 	<script src="js/view/exampleView.js"></script>
-  <script type="js/view/myDinnerLeftView.js"></script>
+  <script src="js/view/myDinnerLeftView.js"></script>
 	<!-- TODO: Here you should include JS code for your other views -->
   </body>
 </html>
