MVC fixed - in theory
Pretty much figured out how the MVC framework will work.
It is briefly described in the myDinnerLeft.js

--- a/selectDish.html
+++ b/selectDish.html
@@ -43,6 +43,13 @@
            <button type="button" class="btn btn-warning" id="SearchButton">Search</button>
         </div>
 
+        
+        <div id="">
+            my Dinner left: <span id="myDinnerLeftID">Things things things</span>
+        </div>
+
+
+
         <div class="row" style = "height: 70%; background: antiquewhite">
           <img class="card-img-top" src="images\bakedbrie.jpg" alt="Card image cap">
 
