--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
 	<!-- The application JavaScript code -->
 	<script src="js/app.js"></script>
+  <script src="js/view/myDinnerLeftView.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
 	<script src="js/view/exampleView.js"></script>
 	<!-- TODO: Here you should include JS code for your other views -->
