--- a/selectDish.html
+++ b/selectDish.html
@@ -43,16 +43,17 @@
            <button type="button" class="btn btn-warning" id="SearchButton">Search</button>
         </div>
 
-        
-        <div id="">
-            my Dinner left: <span id="myDinnerLeftID">Things things things</span>
+        <!--This section should be placed in a left section. But actually functionality will probably work with it. -->
+        <div id="menuSummaryLeft">
+            Number of guests: <span id="numberOfGuests">Couldn't find how many guests there should be.</span>
+            <button id="minusGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button>
+            <button id="plusGuest" class="btn"><span class="glyphicon glyphicon-plus"></span></button>
+            Price of menu: <span id="priceOfMenu">Couldn't find the price of the menu.</span>
+          </div>
         </div>
-
-
 
         <div class="row" style = "height: 70%; background: antiquewhite">
           <img class="card-img-top" src="images\bakedbrie.jpg" alt="Card image cap">
-
           </div>
         </div>
       </div>
