--- a/selectDish.html
+++ b/selectDish.html
@@ -44,7 +44,7 @@
         </div>
 
         <!--This section should be placed in a left section. But actually functionality will probably work with it. -->
-        <div id="menuSummaryLeft">
+        <div id="dinner-sidebar">
             Number of guests: <span id="numberOfGuests">Couldn't find how many guests there should be.</span>
             <button id="minusGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button>
             <button id="plusGuest" class="btn"><span class="glyphicon glyphicon-plus"></span></button>
@@ -69,7 +69,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
 	<script src="js/view/exampleView.js"></script>
-  <script src="js/view/myDinnerLeftView.js"></script>
+  <script src="js/view/myDinnerSidebar.js"></script>
 	<!-- TODO: Here you should include JS code for your other views -->
   </body>
 </html>
