--- a/selectDish.html
+++ b/selectDish.html
@@ -69,7 +69,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
 	<script src="js/view/exampleView.js"></script>
-  <script src="js/view/myDinnerSidebar.js"></script>
+  <script src="js/view/myDinnerSidebarView.js"></script>
 	<!-- TODO: Here you should include JS code for your other views -->
   </body>
 </html>
