--- a/selectDish.html
+++ b/selectDish.html
@@ -44,11 +44,11 @@
         </div>
 
         <!--This section should be placed in a left section. But actually functionality will probably work with it. -->
-        <div id="dinner-sidebar">
-            Number of guests: <span id="numberOfGuests">Couldn't find how many guests there should be.</span>
+        <div id="DinnerSidebar">
+            Number of guests: <span id="NumberOfGuests">Couldn't find how many guests there should be.</span>
             <button id="minusGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button>
             <button id="plusGuest" class="btn"><span class="glyphicon glyphicon-plus"></span></button>
-            Price of menu: <span id="priceOfMenu">Couldn't find the price of the menu.</span>
+            Price of menu: <span id="PriceOfMenu">Couldn't find the price of the menu.</span>
           </div>
         </div>
 
@@ -70,6 +70,7 @@
 	<script src="js/model/dinnerModel.js"></script>
 	<script src="js/view/exampleView.js"></script>
   <script src="js/view/myDinnerSidebarView.js"></script>
+  <script src="js/view/dishDetailsView.js"></script>
 	<!-- TODO: Here you should include JS code for your other views -->
   </body>
 </html>
