--- a/selectDish.html
+++ b/selectDish.html
@@ -16,9 +16,23 @@
   <div class="jumbotron text-center">
     <h1>Dinner Planner</h1>
   </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-3">
+          <div class="container-fluid">
+              <div class="row">
+                  <!--Left column test-->
+                  <div class="col-md-2 border" id="sidebar">
+                      <h2>My Dinner</h2>
+                      <p>Number Of Guests: <span id="nrGuests"></span>
+                      <div>
+                          <button id="removeGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button>
+                          <button id="addGuest" class="btn"><span class="glyphicon glyphicon-plus"></span></button>
+                      </div>
+                      </p>
+                      <div class="row header1">
+                          <div class="col-md-12">
+                              <p class="alignLeft noMargin">Dish Name</p>
+                              <p class="alignRight noMargin">Cost</p>
+                          </div>
+                      </div>
 
       </div>
 
