Fixing small errors. No added code.

--- a/index.html
+++ b/index.html
@@ -1,55 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome - Dinner planner</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="style.css"> <!--"http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-  </head>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Welcome - Dinner planner</title>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="style.css"> <!--"http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" -->
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+</head>
 
+<body>
+	<div class="jumbotron text-center">
+		<h1>Dinner Planner</h1>
+	</div>
+	<!--WELCOME AND ENTER-->
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-3">
+			</div>
+			<div class="col-sm-6" id="FirstPageBody">
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+				<button type="button" class="btn btn-warning" id="WelcomeButton">Create new dinner</button>
+			</div>
+		</div>
+	</div>
+	<!--END WELCOME AND ENTER-->
 
-  <!--<body>-->
-    <!--<div class="grid-container">-->
-      <!--<div class="header">-->
-        <!--<h1>Dinner planner</h1>-->
-      <!--</div>-->
-      <!--<div class="createNewDinnerView">-->
-        <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu nunc ligula. Aenean volutpat magna et fringilla suscipit. Ut efficitur gravida congue. Maecenas orci orci, vestibulum id dolor sed, tempor faucibus lacus. Integer sit amet luctus mauris, eu luctus eros. Pellentesque felis elit, gravida condimentum turpis non, auctor euismod sem. Nulla interdum venenatis massa non varius. Mauris turpis est, accumsan placerat metus et, pretium pulvinar lacus. Duis at dui consequat, tempus leo volutpat, aliquam quam. Curabitur ultricies ac mauris vitae ultrices. Donec pellentesque faucibus sagittis. Integer efficitur, eros sed interdum fringilla, elit mauris dictum tortor, vitae luctus enim ante ac purus. Quisque at iaculis lorem. Donec accumsan ante ut nulla commodo fermentum vitae at massa. Nunc a nunc id neque elementum condimentum. Curabitur elementum dapibus dui, eget iaculis elit porta sit amet.-->
-      <!--</div>-->
-      <!--<div class="newDinnerButton">-->
-        <!--<button class="btn">Create New Dinner</button>-->
-      <!--</div>-->
-    <!--</div>-->
-
-  <div class="jumbotron text-center">
-    <h1>Dinner Planner</h1>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-3">
-      </div>
-      <div class="col-sm-6" id="FirstPageBody">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-        <button type="button" class="btn btn-warning" id="WelcomeButton">Create new dinner</button>
-    </div>
-      <div class="col-sm-3">
-
-      </div>
-    </div>
-  </div>
-
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+	<!-- jQuery and Bootstrap-->
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
 	<!-- The application JavaScript code -->
 	<script src="js/app.js"></script>
-	<script src="js/model/dinnerModel.js"></script>
-	<!-- TODO: Here you should include JS code for your other views -->
-  </body>
+
+</body>
 </html>
