--- a/selectDish.html
+++ b/selectDish.html
@@ -74,17 +74,16 @@
 	</div>
 
 
-	<!-- jQuery -->
+	<!-- jQuery and Bootstrap-->
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
 	<!-- The application JavaScript code -->
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
-	<script src="js/view/exampleView.js"></script>
+
 	<script src="js/view/myDinnerSidebarView.js"></script>
 	<script src="js/view/dishDetailsView.js"></script>
-	<!-- TODO: Here you should include JS code for your other views -->
+
 </body>
 </html>
