--- a/dishDetails.html
+++ b/dishDetails.html
@@ -49,29 +49,28 @@
 						</table>
 					</div>
 				</div>
-			</div>
-			<!--END DISH DETAILS -->
+				
+				<!--END DISH DETAILS -->
 
-			<!--FOOTER? -->
-			<div class="row" style = "height: 70%; background: antiquewhite">
-				<img class="card-img-top" src="images\bakedbrie.jpg" alt="Card image cap">
+				<!--FOOTER? -->
+				<div class="row" style = "height: 70%; background: antiquewhite">
+					<img class="card-img-top" src="images\bakedbrie.jpg" alt="Card image cap">
+				</div>
 			</div>
 			<!--END FOOTER? -->
 		</div>
 	</div>
-</div>
 
+	<!-- jQuery and Bootstrap-->
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery.js"></script>
-<!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+	<!-- The application JavaScript code -->
+	<script src="js/app.js"></script>
+	<script src="js/model/dinnerModel.js"></script>
 
-<!-- The application JavaScript code -->
-<script src="js/app.js"></script>
-<script src="js/model/dinnerModel.js"></script>
-<script src="js/view/exampleView.js"></script>
-<script src="js/view/myDinnerSidebarView.js"></script>
-<script src="js/view/dishDetailsView.js"></script>
-<!-- TODO: Here you should include JS code for your other views -->
+	<script src="js/view/myDinnerSidebarView.js"></script>
+	<script src="js/view/dishDetailsView.js"></script>
+
 </body>
+</html>
