--- a/dishDetails.html
+++ b/dishDetails.html
@@ -38,7 +38,7 @@
 			<div class="col-sm-9" id="second-page-body">
 				<div id="DishInstructions">
 					<h2>
-						<div  id="DishTitle">Dish title.</div>
+						<div  id="DishTitle"></div>
 					</h2>
 					<div    id="DishImage"></div>
 					<div    id="DishDescription"></div>
@@ -49,7 +49,7 @@
 						</table>
 					</div>
 				</div>
-				
+
 				<!--END DISH DETAILS -->
 
 				<!--FOOTER? -->
