--- a/selectDish.html
+++ b/selectDish.html
@@ -60,6 +60,9 @@
 				<!--END DISH SEARCH -->
 
 				<!--SEARCH RESULTS -->
+				<div class="container-fluid">
+					<div class="row" id="SearchResults"></div>
+				</div>
 
 				<!--END SEARCH RESULTS -->
 
@@ -83,7 +86,8 @@
 	<script src="js/model/dinnerModel.js"></script>
 
 	<script src="js/view/myDinnerSidebarView.js"></script>
-	<script src="js/view/dishDetailsView.js"></script>
+	<!--<script src="js/view/dishDetailsView.js"></script>-->
+	<script src="js/view/searchResults.js"></script>
 
 </body>
 </html>
