Fatal variablename fix

--- a/selectDish.html
+++ b/selectDish.html
@@ -87,7 +87,7 @@
 
 	<script src="js/view/myDinnerSidebarView.js"></script>
 	<!--<script src="js/view/dishDetailsView.js"></script>-->
-	<script src="js/view/searchResults.js"></script>
+	<script src="js/view/searchResultsView.js"></script>
 
 </body>
 </html>
