--- a/dishDetails.html
+++ b/dishDetails.html
@@ -31,6 +31,7 @@
 						<p class="alignRight noMargin">Cost</p>
 					</div>
 				</div>
+				<div id="PriceOfMenu">Price of menu not found.</div>
 			</div>
 			<!--END SIDEBAR-->
 
@@ -44,9 +45,7 @@
 					<div    id="DishDescription"></div>
 					<button id="ToSearch">Back to search</button>
 					<div>
-						<table id="DishIngredients">
-
-						</table>
+						<table id="DishIngredients"></table>
 					</div>
 				</div>
 
@@ -69,8 +68,11 @@
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
 
-	<script src="js/view/myDinnerSidebarView.js"></script>
+	<script src="js/view/sidebarView.js"></script>
 	<script src="js/view/dishDetailsView.js"></script>
+	<script src="js/view/dishIconsView.js"></script>
+
+	
 
 </body>
 </html>
