--- a/selectDish.html
+++ b/selectDish.html
@@ -31,6 +31,7 @@
 						<p class="alignRight noMargin">Cost</p>
 					</div>
 				</div>
+				<div id="PriceOfMenu">jfkdsalöfjkldaöjfdkslaöfjdkaslö</div>
 			</div>
 			<!--END SIDEBAR-->
 
@@ -61,7 +62,7 @@
 
 				<!--SEARCH RESULTS -->
 				<div class="container-fluid">
-					<div class="row" id="SearchResults"></div>
+					<div class="row" id="dishIcons"></div>
 				</div>
 
 				<!--END SEARCH RESULTS -->
@@ -85,9 +86,9 @@
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
 
-	<script src="js/view/myDinnerSidebarView.js"></script>
-	<!--<script src="js/view/dishDetailsView.js"></script>-->
-	<script src="js/view/searchResultsView.js"></script>
+	<script src="js/view/sidebarView.js"></script>
+	<script src="js/view/dishDetailsView.js"></script>
+	<script src="js/view/dishIconsView.js"></script>
 
 </body>
 </html>
