--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 
 	<!-- The application JavaScript code -->
 	<script src="js/app.js"></script>
+	<script src="js/model/dinnerModel.js"></script>
 
+	<script src="js/view/sidebarView.js"></script>
+	<script src="js/view/dishDetailsView.js"></script>
+	<script src="js/view/dishIconsView.js"></script>
 </body>
 </html>
